safari flexbox height collapse fix (flex: 1)

--- a/styles/base.less
+++ b/styles/base.less
@@ -206,7 +206,8 @@
 * MOBILE FIRST
 */
 .flex-row {
-	flex: 1 1 auto;
+	/*flex: 1 1 auto;*/
+	flex: 1;
 	.flexbox();
 	.flex-flow(row);
 	height: auto;
@@ -220,7 +221,8 @@
 }
 
 .flex-col {
-	flex: 1 1 auto;
+	/*flex: 1 1 auto;*/
+	flex: 1;
 	.flexbox();
 	.flex-flow(column);
 	height: auto;
